<resources>
    <string name="app_name">上车！</string>
    <string name="time">2016-07-16</string>
    <string name="loading">Loading....</string>
    <string name="share_app">没时间解释了，上车！</string>
    <string name="share_app_to_friend">分享「上车」给朋友</string>
    <string name="download_gank"/>
    <string name="share_video_to">分享视频到</string>
    <string name="项目介绍">gank.io 每日精选一张妹纸图，一个小视频，每日推送关于Android，IOS，前端等各种干货资源。
        \n \n主要依照Google官方MVP-todolist的MVP架构设计方式进行搭建，并搭配RxJava，Retrofit进行设计搭建。
        \n\n数据来源：干货集中营 http://gank.io/api</string>
    <string
        name="rxjava"><a href='https://github.com/ReactiveX/RxJava'>RxJava:io.reactivex:rxjava:1.1.7 </a></string>
    <string name="retrofit"><a
        href='https://github.com/square/retrofit'>Retrofit:com.squareup.retrofit2:retrofit:2.0.0-beta4 </a></string>
    <string
        name="RxAndroid"><a href='https://github.com/ReactiveX/RxAndroid'>RxAndroid:io.reactivex:rxandroid:1.2.1
    </a></string>
    <string
        name="glide"><a href='https://github.com/bumptech/glide'>Glide:com.github.bumptech.glide:glide:3.7.0 </a></string>
    <string name="leakcanary"><a href='https://github.com/square/leakcanary'>LeakCanary:com.squareup.leakcanary:leakcanary-android:1.4-beta2 </a></string>
    <string name="butterknife"><a href='https://github.com/JakeWharton/butterknife'>ButterKnife:com.jakewharton:butterknife:7.0.1 </a></string>
    <string
        name="logger"><a href='https://github.com/tianzhijiexian/logger'>Logger:com.orhanobut:logger:1.15 </a></string>
    <string name="gson"><a href='https://github.com/google/gson'>Gson:com.google.code.gson:gson:2.4 </a></string>
    <string name="PhotoView"><a href='https://github.com/chrisbanes/PhotoView'>PhotoView:com.github.chrisbanes:PhotoView:1.3.0 </a></string>
    <string name="share_web">分享链接到</string>

    <string-array name="tab_names">
        <item>妹纸</item>
        <item>Android</item>
        <item>IOS</item>
        <item>前端</item>
        <item>休息视频</item>
    </string-array>
    <string-array name="search_type">
        <item>Android</item>
        <item>iOS</item>
        <item>休息视频</item>
        <item>福利</item>
        <item>拓展资源</item>
        <item>前端</item>
        <item>瞎推荐</item>
        <item>App</item>
    </string-array>
</resources>
