<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="项目介绍"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardElevation="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autoLink="web"
            android:text="@string/项目介绍"/>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/md_grey_600_color_code"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="开发者"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageView
                android:id="@+id/about_photo"
                android:layout_width="50dp"
                android:elevation="2dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/photo"/>

            <TextView
                android:id="@+id/xblydxj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@+id/about_photo"
                android:text="xblydxj"
                android:textColor="@color/md_black_color_code"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/xblydxj"
                android:layout_below="@+id/xblydxj"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/about_photo"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="我的Github： http://github.com/xblydxj  \n另：上海找个工作"
                android:textSize="12sp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/md_grey_600_color_code"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="开源库"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rxjava"
                android:layout_margin="2dp"
                android:text="@string/rxjava"
                android:textSize="12sp"/>

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:id="@+id/rxandroid"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/RxAndroid"
                android:textSize="12sp"/>

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:id="@+id/retrofit"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/retrofit"
                android:textSize="12sp"/>

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:id="@+id/glide"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/glide"
                android:textSize="12sp"/>

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gson"
                android:layout_margin="2dp"
                android:text="@string/gson"
                android:textSize="12sp"/>

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:id="@+id/butterknife"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/butterknife"
                android:textSize="12sp"/>

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:id="@+id/logger"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/logger"
                android:textSize="12sp"/>

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:id="@+id/photoview"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/PhotoView"
                android:textSize="12sp"/>

            <TextView
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/leakcanary"
                android:layout_margin="2dp"
                android:text="@string/leakcanary"
                android:textSize="12sp"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>